--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,51 @@ jobs:
           path: |
             skeletons
             xliff
-        
-        
+    
+  GeneratePdf:
+    runs-on: ubuntu-latest
+    container: node:12.18.2
+    steps:
+      - uses: actions/checkout@v2
       
+      - name: Install packages
+        run: |
+          apt update
+          apt install fonts-roboto libfontconfig -y
+      
+      - name: Cache node modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: v1-npm-deps-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: v1-npm-deps-
+
+      # Runs a set of commands using the runners shell
+      - name: Run npm preparation script
+        run: npm ci --cache .npm --prefer-offline
+      
+      - name: Generate menus
+        run: node ./scripts/generate-menu.js
+      
+      - name: Generate PDFs
+        run: node ./scripts/generate-pdf.js
+      
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.2.0
+        with:
+          name: ru_manuals
+          path: |
+            pdf
+      
+  DeployPdf:
+    runs-on: ubuntu-latest
+    needs: [GeneratePdf]
+    steps:
+      - name: AWS CLI
+        uses: ItsKarma/aws-cli@v1.70.0    
+        with:
+          args: s3 cp pdf/ s3://${{ secrets.BUCKET_NAME }}/manuals --recursive --acl public-read
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}  
