--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2.2.0
         with:
-          name: ru_manuals
+          name: pdf
           path: |
             pdf
       
@@ -84,6 +84,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [GeneratePdf]
     steps:
+      - name: Download a single artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: pdf
+  
       - name: AWS CLI
         uses: ItsKarma/aws-cli@v1.70.0    
         with:
