--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,7 +92,7 @@ jobs:
       - name: AWS CLI
         uses: ItsKarma/aws-cli@v1.70.0    
         with:
-          args: s3 cp pdf/ s3://${{ secrets.BUCKET_NAME }}/manuals --recursive --acl public-read
+          args: s3 cp . s3://${{ secrets.BUCKET_NAME }}/manuals --include "*.pdf" --recursive --acl public-read
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
