--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -44,3 +44,23 @@ jobs:
           path: |
             skeletons
             xliff
+            
+  PushToSmartcat:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+        with:
+          repository: stereotech/User-Manuals-translation
+    
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v2.0.8
+        with:
+          # Artifact name
+          name: ru_manuals
+          # Destination path
+          path: vcs/ru_manuals
+          
+      - run: |
+          ls vcs
+          ls vcs/ru_manuals
