--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -48,6 +48,10 @@ jobs:
   PushToSmartcat:
     needs: [ExtractTranlations]
     runs-on: ubuntu-latest
+    env:
+      ACCOUNT_ID: ${{ secrets.ACCOUNT_ID }}
+      API_TOKEN: ${{ secrets.API_TOKEN }}
+      PROJECT_ID: ${{ secrets.PROJECT_ID }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
@@ -62,6 +66,10 @@ jobs:
           # Destination path
           path: vcs/ru_manuals
           
-      - run: |
-          ls vcs
-          ls vcs/ru_manuals
+      - name: Get docker image
+        run: docker pull smartcatcom/serge:latest
+        
+      - name: Push translation files to Smartcat
+        run: |
+          ./run-in-docker serge localize
+          ./run-in-docker serge push-ts
