--- a/.github/workflows/build_translations.yml
+++ b/.github/workflows/build_translations.yml
@@ -42,7 +42,6 @@ jobs:
             
   PullFromSmartcat:
     needs: [ExtractTranlations]
-    container: node:12.18.2
     runs-on: ubuntu-latest
     env:
       ACCOUNT_ID: ${{ secrets.ACCOUNT_ID }}
@@ -69,32 +68,43 @@ jobs:
         run: |
           ./run-in-docker serge localize
           ./run-in-docker serge pull-ts localize
+        
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.2.0
+        with:
+          name: built_translations
+          path: vcs/ru_manuals
           
+  ReconstructTranslations:
+    needs: [PullFromSmartcat]
+    runs-on: ubuntu-latest
+    steps:
       - name: Checkout current repo
         uses: actions/checkout@v2.3.4
-        with:
-          path: repo
 
-              # Runs a single command using the runners shell
+      # Runs a single command using the runners shell
       - name: Cache node modules
         uses: actions/cache@v2
         with:
           path: ~/.npm
-          key: v1-npm-deps-${{ hashFiles('**/repo/package-lock.json') }}
+          key: v1-npm-deps-${{ hashFiles('**/package-lock.json') }}
           restore-keys: v1-npm-deps-
 
       # Runs a set of commands using the runners shell
       - name: Run npm preparation script
-        run: |
-          cd repo
-          npm ci --cache .npm --prefer-offline
+        run: npm ci --cache .npm --prefer-offline
           
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v2.0.8
+        with:
+          # Artifact name
+          name: built_translations
+                 
       - name: Reconstruct translations
         run: |
-          cp -a vcs/ru_manuals/. repo/
-          node ./repo/scripts/reconstruct-translations.js en de
-          cp -a repo/en_reconstructed/. repo/en
-          cp -a repo/de_reconstructed/. repo/de
+          node ./scripts/reconstruct-translations.js en de
+          cp -a en_reconstructed/. repo/en
+          cp -a de_reconstructed/. repo/de
           
       - name: Get current date
         id: date
