--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "@svgdotjs/svg.js": "^3.0.16",
         "cheerio": "^1.0.0-rc.3",
         "markdown-pdf": "^10.0.0",
+        "md-to-pdf": "^3.3.1",
         "md2xliff": "^2.0.0",
+        "puppeteer": "^7.1.0",
         "qrcode": "^1.4.4",
         "roboto-fontface": "^0.10.0",
         "through2": "^3.0.1"
