--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,12 @@
                 "en",
                 "de"
             ]
+        },
+        {
+            "type": "pwa-node",
+            "name": "Extract translations",
+            "request": "launch",
+            "program": "${workspaceFolder}\\scripts\\extract-translations.js"
         }
     ]
 }
